--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,25 @@ body {
     flex-direction: column;
 }
 
+.btn--copiar {
+    width: 80px;
+    height: 30px;
+
+
+    border-radius: 24px;
+
+   
+    margin:250px 16px;
+
+    background-color: var(--dark-blue);
+    color: var(--white);
+
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+
+    /* display: none; */
+}
+
 /* Layout tablet */
 
 @media screen and (max-width: 768px) {}
