--- a/css/main.css
+++ b/css/main.css
@@ -38,13 +38,13 @@ body {
 }
 
 .alerta {
-   display: flex;
-   align-items: center;  
+    display: flex;
+    align-items: center;
 }
 
 .unicode {
-    margin-left:16px;
-    
+    margin-left: 16px;
+
 
 }
 
@@ -54,7 +54,7 @@ body {
     height: 18px;
     left: 24px;
     top: 0px;
-   
+
 
     font-family: 'Inter';
     font-style: normal;
@@ -75,25 +75,25 @@ body {
 .botoes {
     display: flex;
     flex-direction: column;
+   
 }
 
-.btn--copiar {
-    width: 80px;
-    height: 30px;
-
+#btn--copiar {
+    position: relative;
+    width: 100px;
+    height: 67px;
 
     border-radius: 24px;
 
-   
-    margin:250px 16px;
+    /* gap: 8px; */
+    margin: 16px;
 
     background-color: var(--dark-blue);
     color: var(--white);
 
     font-family: 'Inter', sans-serif;
     font-weight: 400;
-
-    /* display: none; */
+     
 }
 
 /* Layout tablet */
